Actualizacion de configuración para despliege en Tomcat